--- a/labels.html
+++ b/labels.html
@@ -532,48 +532,61 @@
       const labelWidthPx = 170.57071;
       const labelHeightPx = 170.30001;
 
-      // SVG canvas dimensions (A4 proportions at 796×1124, matching original template)
-      const svgWidth = 796;
-      const svgHeight = 1124;
+      // A4 dimensions in mm
+      const svgWidthMm = 210;
+      const svgHeightMm = 297;
 
-      const cols = xPx.length;
-      const rows = yPx.length;
+      // Original pixel canvas dimensions
+      const originalWidthPx = 796;
+      const originalHeightPx = 1124;
 
-      // Generate SVG at full A4 size
+      // Calculate conversion ratios
+      const ratioX = svgWidthMm / originalWidthPx;
+      const ratioY = svgHeightMm / originalHeightPx;
+      const ratioAvg = (ratioX + ratioY) / 2;
+
+      // Convert pixel coordinates to mm
+      const xMm = xPx.map(v => Number((v * ratioX).toFixed(2)));
+      const yMm = yPx.map(v => Number((v * ratioY).toFixed(2)));
+      const labelWidthMm = Number((labelWidthPx * ratioAvg).toFixed(2));
+      const labelHeightMm = Number((labelHeightPx * ratioAvg).toFixed(2));
+
+      const cols = xMm.length;
+      const rows = yMm.length;
+
+      // Generate SVG at A4 size with mm dimensions
       let svg = '';
-      svg += `<svg xmlns="http://www.w3.org/2000/svg" width="${svgWidth}" height="${svgHeight}" viewBox="0 0 ${svgWidth} ${svgHeight}">`;
+      svg += `<svg xmlns="http://www.w3.org/2000/svg" width="${svgWidthMm}mm" height="${svgHeightMm}mm" viewBox="0 0 ${svgWidthMm} ${svgHeightMm}">`;
       svg += '<rect width="100%" height="100%" fill="white" />';
 
-      // Generate each label using the same approach as the source SVG
+      // Generate each label
       let index = 1;
       for (let row = 0; row < rows; row++) {
         for (let col = 0; col < cols; col++) {
-          const x = xPx[col];
-          const y = yPx[row];
+          const x = xMm[col];
+          const y = yMm[row];
 
-          // Create clipPath for this label (rectangle at the label position)
+          // Create clipPath for this label
           const clipId = `clip-${index}`;
           
           svg += `<defs>`;
           svg += `<clipPath id="${clipId}">`;
-          svg += `<rect x="${x}" y="${y}" width="${labelWidthPx}" height="${labelHeightPx}" />`;
+          svg += `<rect x="${x}" y="${y}" width="${labelWidthMm}" height="${labelHeightMm}" />`;
           svg += `</clipPath>`;
           svg += `</defs>`;
 
-          // White background circle (circular crop)
-          const cx = x + labelWidthPx / 2;
-          const cy = y + labelHeightPx / 2;
-          const r = labelWidthPx / 2;
+          // White background circle
+          const cx = x + labelWidthMm / 2;
+          const cy = y + labelHeightMm / 2;
+          const r = labelWidthMm / 2;
           svg += `<circle cx="${cx}" cy="${cy}" r="${r}" fill="white" />`;
 
-          // Image using transform matrix (exactly like source SVG)
-          // matrix(scaleX, 0, 0, scaleY, translateX, translateY)
-          // This scales a 1×1 image to fill the label area
+          // Image using transform matrix
           svg += `<image `;
           svg += `href="${imageDataUrl}" `;
           svg += `width="1" height="1" `;
           svg += `preserveAspectRatio="none" `;
-          svg += `transform="matrix(${labelWidthPx},0,0,${labelHeightPx},${x},${y})" `;
+          svg += `transform="matrix(${labelWidthMm},0,0,${labelHeightMm},${x},${y})" `;
           svg += `clip-path="url(#${clipId})" `;
           svg += `/>`;
 
