--- a/labels.html
+++ b/labels.html
@@ -534,20 +534,27 @@
       const labelWidthPx = 170.57071;
       const labelHeightPx = 170.30001;
 
-      // SVG canvas dimensions (pixel units for correct display)
-      const svgWidth = 796;
-      const svgHeight = 1124;
-
-      // A4 physical dimensions in mm for proper printing
+      // A4 dimensions in mm
       const svgWidthMm = 210;
       const svgHeightMm = 297;
 
-      const cols = xPx.length;
-      const rows = yPx.length;
+      // Conversion ratios (mm per pixel)
+      const ratioX = svgWidthMm / 796;  // 0.2638196
+      const ratioY = svgHeightMm / 1124; // 0.2642359
+      const ratioAvg = (ratioX + ratioY) / 2; // 0.26402775
 
-      // Generate SVG with pixel-based viewBox and mm physical dimensions
+      // Convert all coordinates to millimeters
+      const xMm = xPx.map(v => Number((v * ratioX).toFixed(2)));
+      const yMm = yPx.map(v => Number((v * ratioY).toFixed(2)));
+      const labelWidthMm = Number((labelWidthPx * ratioAvg).toFixed(2));
+      const labelHeightMm = Number((labelHeightPx * ratioAvg).toFixed(2));
+
+      const cols = xMm.length;
+      const rows = yMm.length;
+
+      // Generate SVG with consistent mm units throughout
       let svg = '';
-      svg += `<svg xmlns="http://www.w3.org/2000/svg" width="${svgWidthMm}mm" height="${svgHeightMm}mm" viewBox="0 0 ${svgWidth} ${svgHeight}">`;
+      svg += `<svg xmlns="http://www.w3.org/2000/svg" width="${svgWidthMm}mm" height="${svgHeightMm}mm" viewBox="0 0 ${svgWidthMm} ${svgHeightMm}">`;
       svg += '<rect width="100%" height="100%" fill="white" />';
 
       // Generate all clipPaths in a single defs block
@@ -555,12 +562,12 @@
       let index = 1;
       for (let row = 0; row < rows; row++) {
         for (let col = 0; col < cols; col++) {
-          const x = xPx[col];
-          const y = yPx[row];
+          const x = xMm[col];
+          const y = yMm[row];
           const clipId = `clip-${index}`;
           
           svg += `<clipPath id="${clipId}">`;
-          svg += `<rect x="${x}" y="${y}" width="${labelWidthPx}" height="${labelHeightPx}" />`;
+          svg += `<rect x="${x}" y="${y}" width="${labelWidthMm}" height="${labelHeightMm}" />`;
           svg += `</clipPath>`;
 
           index++;
@@ -572,22 +579,22 @@
       index = 1;
       for (let row = 0; row < rows; row++) {
         for (let col = 0; col < cols; col++) {
-          const x = xPx[col];
-          const y = yPx[row];
+          const x = xMm[col];
+          const y = yMm[row];
           const clipId = `clip-${index}`;
 
           // White background circle
-          const cx = x + labelWidthPx / 2;
-          const cy = y + labelHeightPx / 2;
-          const r = labelWidthPx / 2;
+          const cx = x + labelWidthMm / 2;
+          const cy = y + labelHeightMm / 2;
+          const r = labelWidthMm / 2;
           svg += `<circle cx="${cx}" cy="${cy}" r="${r}" fill="white" />`;
 
-          // Image using transform matrix (same as reference file)
+          // Image using transform matrix
           svg += `<image `;
           svg += `href="${imageDataUrl}" `;
           svg += `width="1" height="1" `;
           svg += `preserveAspectRatio="none" `;
-          svg += `transform="matrix(${labelWidthPx},0,0,${labelHeightPx},${x},${y})" `;
+          svg += `transform="matrix(${labelWidthMm},0,0,${labelHeightMm},${x},${y})" `;
           svg += `clip-path="url(#${clipId})" `;
           svg += `/>`;
 
