--- a/labels.html
+++ b/labels.html
@@ -213,11 +213,11 @@
       color: #374151;
     }
     #sheet-preview-wrapper {
-      width: 707px;
-      height: 1000px;
+      width: 796px;
+      height: 1124px;
       display: flex;
       align-items: flex-start;
-      justify-content: flex-start;
+      justify-content: flex-end;
       overflow: auto;
       background: #f9fafb;
       border-radius: 8px;
@@ -230,8 +230,9 @@
       background: white;
       border-radius: 4px;
       box-shadow: 0 2px 6px rgba(0, 0, 0, 0.04);
-      /* Ensure SVG renders at natural size within the scrollable container */
-      flex-shrink: 0;
+      /* Match the template exactly - 210mm × 297mm at screen resolution */
+      width: 796px;
+      height: 1124px;
     }
     .controls {
       display: flex;
@@ -534,7 +535,7 @@
       const labelWidthPx = 170.57071;
       const labelHeightPx = 170.30001;
 
-      // A4 dimensions in mm
+      // A4 dimensions in mm (matching template exactly)
       const svgWidthMm = 210;
       const svgHeightMm = 297;
 
@@ -552,12 +553,11 @@
       const cols = xMm.length;
       const rows = yMm.length;
 
-      // Generate SVG with consistent mm units throughout
+      // Generate SVG matching the template structure exactly
       let svg = '';
       svg += `<svg xmlns="http://www.w3.org/2000/svg" width="${svgWidthMm}mm" height="${svgHeightMm}mm" viewBox="0 0 ${svgWidthMm} ${svgHeightMm}">`;
-      svg += '<rect width="100%" height="100%" fill="white" />';
-
-      // Generate all clipPaths in a single defs block
+      
+      // Generate all clipPaths in a single defs block (like template)
       svg += '<defs>';
       let index = 1;
       for (let row = 0; row < rows; row++) {
@@ -575,7 +575,10 @@
       }
       svg += '</defs>';
 
-      // Generate all labels (circles and images)
+      // Full background image (like template)
+      svg += `<image href="${imageDataUrl}" width="${svgWidthMm}" height="${svgHeightMm}" x="0" y="0" preserveAspectRatio="none" />`;
+
+      // Generate all label overlays (circles with images)
       index = 1;
       for (let row = 0; row < rows; row++) {
         for (let col = 0; col < cols; col++) {
@@ -589,7 +592,7 @@
           const r = labelWidthMm / 2;
           svg += `<circle cx="${cx}" cy="${cy}" r="${r}" fill="white" />`;
 
-          // Image using transform matrix
+          // Image using transform matrix (same as template)
           svg += `<image `;
           svg += `href="${imageDataUrl}" `;
           svg += `width="1" height="1" `;
